--- a/.github/ISSUE_TEMPLATE/request_test.yml
+++ b/.github/ISSUE_TEMPLATE/request_test.yml
@@ -1,29 +1,29 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
+name: application requests
+description: Application request for Onboarding spa
+title: "[Spa App]: "
+labels: ["request"]
 assignees:
-  - octocat
+  - ccoe
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this request form!
   - type: input
     id: contact
     attributes:
       label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      description: How can we get in touch with you if we need more information wrt your request?
+      placeholder: ex. emailregions.com
     validations:
       required: false
   - type: textarea
-    id: what-happened
+    id: Reason for Request
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
+      label: Use Case for request to onboard?
+      description: Briefly explan here?
       placeholder: Tell us what you see!
-      value: "A bug happened!"
+      value: "explanation.....!"
     validations:
       required: true
   - type: dropdown
